# emmylua_dap

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cmd_args.rs  main.rs
src/context/: mod.rs  snapshot.rs
src/context/debugger/: cache.rs  error.rs  mod.rs  proto.rs
src/context/emmy_new_debugger/: mod.rs
src/handler/: debug_action_request.rs  debugger_connected.rs  debugger_notification.rs  evaluate_request.rs  initialize.rs  initialize_request.rs  launch.rs  launch_request.rs  mod.rs  scopes_request.rs  set_breakpoint_request.rs  stack_trace_request.rs  threads.rs  threads_request.rs  variables_request.rs
src/logger/: best_log_path.rs  mod.rs
