[package]
name = "emmylua_dap"
version = "0.1.0"
edition = "2024"

[dependencies]
dap = { package= "emmy_dap_types", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7"
glob = "0.3"
log = "0.4"
fern = "0.7"
chrono = "0.4"
structopt = "0.3"